--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
-
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: #f2f2f2;
+}
+header {
+  background-color: #006400;
+  color: white;
+  padding: 20px 0;
+}
+.logo {
+  width: 100px;
+  display: block;
+  margin: 0 auto 10px;
+}
